--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@ share/python-wheels/
 *.egg
 MANIFEST
 include/
+lib64 
+pyvenv.cfg
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
